# wit-bindgen-c-memory-oob

./: .gitignore  Makefile  README.md  play.sh
docker/: Dockerfile  dockerize.sh
guest-c/src/: greeter.c  greeter.cc
host-rs/: .gitignore  Cargo.toml
host-rs/src/: main.rs
wit/: world.wit
