[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
wasmtime = "21.0.0"
wasmtime-wasi = "21.0.0"

[dependencies.async-std]
features = ["attributes"]
version = "1.12.0"

[dependencies.clap]
features = ["derive"]
version = "4.5.4"
